Add Jekyll blog functionality
Convert static site to Jekyll with blog support. Latest blog post now displays
on homepage above nav tiles, with individual post pages and blog archive.

- Add Jekyll configuration and dependencies (Gemfile, _config.yml)
- Create layouts (default, page, post, blog-archive) and includes
- Convert all pages to use Jekyll templates
- Add blog infrastructure (_posts directory, blog archive page)
- Add blog CSS styles matching existing design
- Update README with Jekyll setup and usage instructions
- Preserve all existing functionality and vintage 2011 design
- Implement canonical URLs for SEO

Posts display in full on homepage, with permalinks at /blog/YYYY/MM/DD/title.html

--- a/resume.html
+++ b/resume.html
@@ -1,189 +1,153 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=0.9">
+---
+layout: default
+title: "Resume of Eric Gelinas"
+header_text: "Resume of Eric Gelinas"
+header_style: "text-align:right;"
+container_style: "max-width:900px; margin:0 auto;"
+---
 
-    <!-- Google Fonts - Roboto -->
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+<!-- Google Fonts - Roboto -->
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
-    <!-- Existing styles -->
-    <link rel="stylesheet" href="style/style_domestica_summer.css" type="text/css" media="screen" charset="utf-8">
+<style media='print'>
+	h2, footer, .link-off { display:none !important; }
+	h3 {margin-top: 40px;}
+	body {
+		font-size: 10pt;
+		background: none;
+		color: black;
+		font-family: 'Roboto', sans-serif;
+		line-height: 13pt;
+	}
+</style>
 
-    <title>Resume of Eric Gelinas</title>
-    <meta name="description" content="">
-    <meta name="author" content="">
+<main>
 
-    <style media='print'>
-        h2, footer, .link-off { display:none !important; }
-        h3 {margin-top: 40px;}
-        body {
-            font-size: 10pt;
-            background: none;
-            color: black;
-            font-family: 'Roboto', sans-serif;
-            line-height: 13pt;
-        }
-    </style>
-</head>
+<section>
+	<h3>Summary</h3>
+	<p>Over 20 years of web standards-focused interface development experience. An uncompromising focus on elegant product development. Comfortable innovating on and maintaining sites at scale. A proven history of writing high-performing server and client JavaScript.</p>
 
-<body class="domestica summer">
+	<h3>Experience</h3>
+	<h4>2023 to Present: Founding Engineer and Engineering Manager - Noded Ai, Marin, CA</h4>
+	<p>
+		<ul>
+			<li>Solo development of a web UI using APollo Client, React, and Tailwind</li>
+			<li>Collaborative product development with the co-founder</li>
+			<li>Hiring and managment of a team of two Front End Engineers and one Designer</li>
+		</ul>
+	</p>
 
-    <div id="container" style="max-width:900px; margin:0 auto;">
-        <header>
-            <div id='logo'>
-                <div class="illustration">
-                    <div class="block-1 first"></div>
-                    <div class="block-2"></div>
-                    <div class="block-3"></div>
-                    <div class="block-4"></div>
-                </div>
-                <h2>Standard Pixel</h2>
-            </div>
-            <h1 style="text-align:right;">Resume of Eric Gelinas</h1>
-        </header>
+	<h4>2022 to 2023: Staff Tech Lead Manager - Slack, San Francisco, CA</h4>
+	<p>
+		<ul>
+			<li>Continued leadership in frontend development for Workflow Builder 2.0</li>
+			<li>Managed a team of frontend engineers and provided guidance on technical challenges</li>
+			<li>Contributed to technical strategy and architectural decisions</li>
+			<li>Collaborated with UX design and cross-functional teams to drive product improvements to Slack's next generation platform</li>
+			<li>Led efforts to improve team productivity and code quality</li>
+		</ul>
+	</p>
 
-        <main>
+	<h4>2019 to 2022: Staff Engineer, Frontend - Slack, San Francisco, CA</h4>
+	<p>
+		<ul>
+			<li>Lead development of Admin / End user UI for installation of API integrations for large enterprise customers</li>
+			<li>Moved legacy XHP interfaces to React and TypeScript</li>
+			<li>Gained support for an internal standard for APIs supporting UIs to optimize perceived loading and flexibly scale the amount of data shown in complex user-facing data tables</li>
+			<li>Direct impact on product decisions informed by data, organizational priorities, relationships with UX design, and an understanding of architectural opportunities</li>
+			<li>Over a year of direct engineering leadership experience prioritizing work, facilitating organization changes, hiring, and managing performance</li>
+		</ul>
+	</p>
 
-        <section>
-            <h3>Summary</h3>
-            <p>Over 20 years of web standards-focused interface development experience. An uncompromising focus on elegant product development. Comfortable innovating on and maintaining sites at scale. A proven history of writing high-performing server and client JavaScript.</p>
+	<h4>2016 to 2019: Sr. Software Engineer - Apple, San Francisco, CA</h4>
+	<p>
+		<ul>
+			<li>Lead development of the authorization interface for MapKit JS</li>
+			<li>Developed GeoJSON import support for MapKit JS</li>
+			<li>Lead development and continue to maintain a <a href="https://maps.developer.apple.com/">dashboard application</a> for MapKit JS users</li>
+			<li>Authored a <a href="https://developer.apple.com/videos/play/wwdc2018/508">video presentation</a> on MapKit JS authorization for WWDC 2016</li>
+			<li>Worked on the launch of transit place cards for the web</li>
+			<li>Directly responsible for public developer documentation and bi-weekly publishing of release notes for MapKit JS</li>
+		</ul>
+		<ul>
+			<li><a href="https://maps.developer.apple.com/">maps.developer.apple.com</a></li>
+			<li><a href="https://developer.apple.com/documentation/mapkitjs">developer.apple.com/documentation/mapkitjs</a></li>
+			<li><a href="https://maps.apple.com/place?address=Irvine%2C%20CA%2C%20United%20States&auid=5590598028918477796&ll=33.6571077%2C-117.7329293&lsp=9902&q=Irvine%20Station">maps.apple.com/place</a></li>
+		</ul>
+	</p>
 
-            <h3>Experience</h3>
-            <h4>2023 to Present: Founding Engineer and Engineering Manager - Noded Ai, Marin, CA</h4>
-            <p>
-                <ul>
-                    <li>Solo development of a web UI using APollo Client, React, and Tailwind</li>
-                    <li>Collaborative product development with the co-founder</li>
-                    <li>Hiring and managment of a team of two Front End Engineers and one Designer</li>
-                </ul>
-            </p>
+	<h4>2015 to 2016: Web Developer - Dropbox, San Francisco, CA</h4>
+	<p>
+		<ul>
+			<li>Primary frontend developer on the "Campus Cup" campaign - one of the first production React applications at Dropbox</li>
+			<li>Trained peers on React</li>
+			<li>Performed 2-6 engineering interviews a week and trained peers on interview procedures</li>
+			<li>Built a mechanism for serving SVGs which are internationalized at runtime and cached</li>
+			<li>Wrote production code in Python, JavaScript ES5, TypeScript, and CoffeeScript</li>
+			<li>Mentored new-hires, including introductory task delegation and weekly progress check-ins</li>
+			<li>Evangelized and improved tools for responsive development</li>
+		</ul>
+	</p>
 
-            <h4>2022 to 2023: Staff Tech Lead Manager - Slack, San Francisco, CA</h4>
-            <p>
-                <ul>
-                    <li>Continued leadership in frontend development for Workflow Builder 2.0</li>
-                    <li>Managed a team of frontend engineers and provided guidance on technical challenges</li>
-                    <li>Contributed to technical strategy and architectural decisions</li>
-                    <li>Collaborated with UX design and cross-functional teams to drive product improvements to Slack's next generation platform</li>
-                    <li>Led efforts to improve team productivity and code quality</li>
-                </ul>
-            </p>
+	<h4>2014 to 2015: Sr. Frontend Engineer / UX Designer - Stamen Design, San Francisco, CA</h4>
+	<p>
+		<ul>
+			<li>Full-stack JavaScript development of <a href="http://caliparks.org">caliparks.org</a> [<a href="https://github.com/stamen/caliparks.org">Source</a>]</li>
+			<li>UX design on client projects as well as <a href="http://caliparks.org">caliparks.org</a></li>
+			<li>Data-driven sketching and production development using PostGIS, D3, Leaflet, and qGIS</li>
+			<li>Direct client contact and management of deliverables</li>
+			<li>Spoke publicly and attended events on behalf of Stamen Design</li>
+			<li>Built applications for scale using JavaScript, Node.js, and React.JS</li>
+		</ul>
+		<ul>
+			<li><a href="http://content.stamen.com/edf-methane-maps">EDF Methane maps</a></li>
+			<li><a href="http://content.stamen.com/silent-springs-specifically-audubon-society">Audubon climate change model</a></li>
+		</ul>
+	</p>
 
-            <h4>2019 to 2022: Staff Engineer, Frontend - Slack, San Francisco, CA</h4>
-            <p>
-                <ul>
-                    <li>Lead development of Admin / End user UI for installation of API integrations for large enterprise customers</li>
-                    <li>Moved legacy XHP interfaces to React and TypeScript</li>
-                    <li>Gained support for an internal standard for APIs supporting UIs to optimize perceived loading and flexibly scale the amount of data shown in complex user-facing data tables</li>
-                    <li>Direct impact on product decisions informed by data, organizational priorities, relationships with UX design, and an understanding of architectural opportunities</li>
-                    <li>Over a year of direct engineering leadership experience prioritizing work, facilitating organization changes, hiring, and managing performance</li>
-                </ul>
-            </p>
+	<h4>2009 to 2013: Sr. Frontend Engineer - Flickr, San Francisco, CA</h4>
+	<p>
+		<ul>
+			<li>Implemented an engineering project management process which was adopted by all project teams</li>
+			<li>Designed a process for concordance between Yahoo Where on Earth IDs and Foursquare Venue IDs. This is in use on all Flickr Mobile apps</li>
+			<li>Moved flickr.com/map to run on LeafletJS and created a system for displaying map layers based on time taken and geo-coordinate of a photo</li>
+			<li>Developed Flickr's primary web geotagging interface</li>
+			<li>Key contributor in a complete redesign of the Flickr Photo page in 2010</li>
+			<li>Frontend code changes on Flickr.com, which include JavaScript, HTML, CSS, and PHP</li>
+			<li>Involved in architecture decisions for frontend technologies</li>
+		</ul>
+	</p>
 
-            <h4>2016 to 2019: Sr. Software Engineer - Apple, San Francisco, CA</h4>
-            <p>
-                <ul>
-                    <li>Lead development of the authorization interface for MapKit JS</li>
-                    <li>Developed GeoJSON import support for MapKit JS</li>
-                    <li>Lead development and continue to maintain a <a href="https://maps.developer.apple.com/">dashboard application</a> for MapKit JS users</li>
-                    <li>Authored a <a href="https://developer.apple.com/videos/play/wwdc2018/508">video presentation</a> on MapKit JS authorization for WWDC 2016</li>
-                    <li>Worked on the launch of transit place cards for the web</li>
-                    <li>Directly responsible for public developer documentation and bi-weekly publishing of release notes for MapKit JS</li>
-                </ul>
-                <ul>
-                    <li><a href="https://maps.developer.apple.com/">maps.developer.apple.com</a></li>
-                    <li><a href="https://developer.apple.com/documentation/mapkitjs">developer.apple.com/documentation/mapkitjs</a></li>
-                    <li><a href="https://maps.apple.com/place?address=Irvine%2C%20CA%2C%20United%20States&auid=5590598028918477796&ll=33.6571077%2C-117.7329293&lsp=9902&q=Irvine%20Station">maps.apple.com/place</a></li>
-                </ul>
-            </p>
+	<h4>2007 to 2009: Frontend Engineer - Yahoo!, Burbank, CA</h4>
+	<p>
+		<ul>
+			<li>Wrote an extension for the YUI Data Table which inserts contextual data as sub rows</li>
+			<li>Designed a Frontend unit testing harness for use in a JSP based framework</li>
+			<li>Gave talks on the subject of Frontend development to Yahoo! employees</li>
+			<li>Created a process for feeding patches from the APT product to the YUI library</li>
+			<li>Authored and supported JavaScript-based interface components distributed through a packaged framework</li>
+			<li>Offered ongoing support and guidance to developers through mail lists and documentation</li>
+			<li>Evangelized Web Standards adherence from design to development</li>
+			<li>Worked with development teams to find practical applications of Agile development principles including elements of Scrum and Kanban</li>
+		</ul>
+	</p>
 
-            <h4>2015 to 2016: Web Developer - Dropbox, San Francisco, CA</h4>
-            <p>
-                <ul>
-                    <li>Primary frontend developer on the "Campus Cup" campaign - one of the first production React applications at Dropbox</li>
-                    <li>Trained peers on React</li>
-                    <li>Performed 2-6 engineering interviews a week and trained peers on interview procedures</li>
-                    <li>Built a mechanism for serving SVGs which are internationalized at runtime and cached</li>
-                    <li>Wrote production code in Python, JavaScript ES5, TypeScript, and CoffeeScript</li>
-                    <li>Mentored new-hires, including introductory task delegation and weekly progress check-ins</li>
-                    <li>Evangelized and improved tools for responsive development</li>
-                </ul>
-            </p>
+	<h4>2004 to 2007: Markup Engineer - EarthLink, Inc, Pasadena, CA</h4>
+	<p>
+		<ul>
+			<li>Led interface development of a Map-based search product. Leveraged YUI, Prototype JavaScript Framework, and Scriptaculous frameworks to enhance the search and mapping functionality of the Microsoft Virtual Earth API.</li>
+			<li>Applied knowledge of Agile development concepts to create a Web 2.0 portal that will replace the current EarthLink web portal.</li>
+			<li>Key developer of a social bookmarking site. This application was built using the Ruby on Rails framework. RJS and JSON were used to facilitate an AJAX-enabled application of Model-View-Controller.</li>
+			<li>Ongoing HTML, JavaScript, and CSS enhancements to a web portal with a user base of over 4 million subscribers. Optimized images delivered in Photoshop format from UI design group. Developed Apache Velocity templates that enable a content management tool.</li>
+		</ul>
+	</p>
+</section>
 
-            <h4>2014 to 2015: Sr. Frontend Engineer / UX Designer - Stamen Design, San Francisco, CA</h4>
-            <p>
-                <ul>
-                    <li>Full-stack JavaScript development of <a href="http://caliparks.org">caliparks.org</a> [<a href="https://github.com/stamen/caliparks.org">Source</a>]</li>
-                    <li>UX design on client projects as well as <a href="http://caliparks.org">caliparks.org</a></li>
-                    <li>Data-driven sketching and production development using PostGIS, D3, Leaflet, and qGIS</li>
-                    <li>Direct client contact and management of deliverables</li>
-                    <li>Spoke publicly and attended events on behalf of Stamen Design</li>
-                    <li>Built applications for scale using JavaScript, Node.js, and React.JS</li>
-                </ul>
-                <ul>
-                    <li><a href="http://content.stamen.com/edf-methane-maps">EDF Methane maps</a></li>
-                    <li><a href="http://content.stamen.com/silent-springs-specifically-audubon-society">Audubon climate change model</a></li>
-                </ul>
-            </p>
+<section class="link-off">
+	<a href="/">...off to StandardPixel.com...</a>
+</section>
+</main>
 
-            <h4>2009 to 2013: Sr. Frontend Engineer - Flickr, San Francisco, CA</h4>
-            <p>
-                <ul>
-                    <li>Implemented an engineering project management process which was adopted by all project teams</li>
-                    <li>Designed a process for concordance between Yahoo Where on Earth IDs and Foursquare Venue IDs. This is in use on all Flickr Mobile apps</li>
-                    <li>Moved flickr.com/map to run on LeafletJS and created a system for displaying map layers based on time taken and geo-coordinate of a photo</li>
-                    <li>Developed Flickr's primary web geotagging interface</li>
-                    <li>Key contributor in a complete redesign of the Flickr Photo page in 2010</li>
-                    <li>Frontend code changes on Flickr.com, which include JavaScript, HTML, CSS, and PHP</li>
-                    <li>Involved in architecture decisions for frontend technologies</li>
-                </ul>
-            </p>
-
-            <h4>2007 to 2009: Frontend Engineer - Yahoo!, Burbank, CA</h4>
-            <p>
-                <ul>
-                    <li>Wrote an extension for the YUI Data Table which inserts contextual data as sub rows</li>
-                    <li>Designed a Frontend unit testing harness for use in a JSP based framework</li>
-                    <li>Gave talks on the subject of Frontend development to Yahoo! employees</li>
-                    <li>Created a process for feeding patches from the APT product to the YUI library</li>
-                    <li>Authored and supported JavaScript-based interface components distributed through a packaged framework</li>
-                    <li>Offered ongoing support and guidance to developers through mail lists and documentation</li>
-                    <li>Evangelized Web Standards adherence from design to development</li>
-                    <li>Worked with development teams to find practical applications of Agile development principles including elements of Scrum and Kanban</li>
-                </ul>
-            </p>
-
-            <h4>2004 to 2007: Markup Engineer - EarthLink, Inc, Pasadena, CA</h4>
-            <p>
-                <ul>
-                    <li>Led interface development of a Map-based search product. Leveraged YUI, Prototype JavaScript Framework, and Scriptaculous frameworks to enhance the search and mapping functionality of the Microsoft Virtual Earth API.</li>
-                    <li>Applied knowledge of Agile development concepts to create a Web 2.0 portal that will replace the current EarthLink web portal.</li>
-                    <li>Key developer of a social bookmarking site. This application was built using the Ruby on Rails framework. RJS and JSON were used to facilitate an AJAX-enabled application of Model-View-Controller.</li>
-                    <li>Ongoing HTML, JavaScript, and CSS enhancements to a web portal with a user base of over 4 million subscribers. Optimized images delivered in Photoshop format from UI design group. Developed Apache Velocity templates that enable a content management tool.</li>
-                </ul>
-            </p>
-        </section>
-
-        <section class="link-off">
-            <a href="/">...off to StandardPixel.com...</a>
-        </section>
-        </main>
-
-        <footer>
-            <p>Thank you for having a look at my career. This is the best summary I could manage with HTML as a medium. I recommend a real conversation for best results.</p>
-        </footer>
-    </div>
-
-    <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-        ga('create', 'UA-3495577-1', 'standardpixel.com');
-        ga('send', 'pageview');
-    </script>
-
-</body>
-</html>
+<footer>
+	<p>Thank you for having a look at my career. This is the best summary I could manage with HTML as a medium. I recommend a real conversation for best results.</p>
+</footer>
