--- a/404.html
+++ b/404.html
@@ -1,60 +1,20 @@
-<!doctype html>
-	<head>
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+---
+layout: default
+title: "¯\\_(ツ)_/¯"
+container_style: "max-width:900px; margin:0 auto;"
+show_home_link: true
+---
 
-		<title>¯\_(ツ)_/¯</title>
-		<meta name="description" content="">
-		<meta name="author" content="">
+<style>
+	body {
+		min-height: 750px;
+	}
+	header h1 {
+		display: none;
+	}
+</style>
 
-		<meta name="viewport" content="width=device-width, initial-scale=0.9">
-
-		<!--[if lt IE 9]>
-			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-		<![endif]-->
-
-		<script type="text/javascript" src="http://use.typekit.com/tkt0mro.js"></script>
-		<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
-
-		<link rel="stylesheet" href="style/style_domestica_summer.css" type="text/css" media="screen" charset="utf-8">
-	</head>
-
-	<body class="domestica summer" style="min-height:750px;">
-
-		<div id="container" style="max-width:900px; margin:0 auto;">
-			<header>
-				<div id='logo' onclick="document.location.href='/'">
-					<div class="illustration">
-						<div class="block-1 first"></div>
-						<div class="block-2"></div>
-						<div class="block-3"></div>
-						<div class="block-4"></div>
-					</div>
-					<h2>Standard Pixel</h2>
-				</div>
-			</header>
-
-			<section style="padding:10vh 0 10vh 0;">
-				<h1 style="text-align:center;">¯\_(ツ)_/¯</h1>
-				<h3 style="text-align:center;">Well, that link didn't work. I may have moved the page. How about checking the <a href="/" style="white-space: nowrap;line-height:1.5em;">home page</a>. You can find most things from there.</h3>
-			</section>
-
-			<footer>
-				<div class="cc-img"><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-nc-sa/3.0/88x31.png" /></a></div>
-				<div class="cc-text"><p><br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">StandardPixel</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="http://standardpixel.com" property="cc:attributionName" rel="cc:attributionURL">Eric Gelinas</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/">Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License</a>.</p></div>
-			</footer>
-		</div>
-
-		<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-3495577-1', 'standardpixel.com');
-  ga('send', 'pageview');
-
-</script>
-
-	</body>
-</html>
+<section style="padding:10vh 0 10vh 0;">
+	<h1 style="text-align:center;">¯\_(ツ)_/¯</h1>
+	<h3 style="text-align:center;">Well, that link didn't work. I may have moved the page. How about checking the <a href="/" style="white-space: nowrap;line-height:1.5em;">home page</a>. You can find most things from there.</h3>
+</section>
