Add articles link list to replace Pocket
Replace sunset Pocket link with self-hosted articles page using Jekyll data files.

- Create _data/articles.yml for easy link management
- Create articles.html page to display article links
- Update homepage nav tile to point to /articles.html
- Add _data/README.md with instructions for adding articles
- Fix typo: "i'm" -> "I'm" in nav description

To add articles, simply edit _data/articles.yml - no HTML needed.

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@ title: "StandardPixel.com: Curation of things by Eric Gelinas"
 			<p>A deeper dive into my musical tastes and the occasional musical tastes of my children</p>
 		</li>
 		<li class="nav__item">
-			<a href="http://getpocket.com/@e7bdkpZbTf9a5ga5a5AdtT9A2fg5T11520xI9eGk66LdhudY06a4cr57ts4KN20Z?src=navbar">Articles</a>
-			<p>Articles i'm interested in</p>
+			<a href="articles.html">Articles</a>
+			<p>Articles I'm interested in</p>
 		</li>
 		<li class="nav__item">
 			<a href="http://www.pinterest.com/standardpixel/wants/">Wish List</a>
