Add optional notes support for articles
Updated the entire pipeline to support optional notes:

Obsidian Plugin:
- Added "Note (optional)" field to link capture modal
- Automatically focuses note field after valid URL is pasted
- Format: "- URL - note text" or "- URL" (without note)

Sync Script:
- Updated extract_urls to parse notes from "- URL - note" format
- Process line-by-line to properly handle multi-line content
- Notes are included in articles.yml when present
- Console output shows "[has note]" indicator

Articles Display:
- Updated articles.html to show notes below article links
- Notes appear in gray text for visual hierarchy
- Fully optional - works with or without notes

README:
- Documented note feature in Quick Link Capture section
- Explained that notes are optional and appear on website

--- a/articles.html
+++ b/articles.html
@@ -17,8 +17,8 @@ header_style: "text-align:right;"
 				{% if article.date %}
 					<span style="color: #999; font-size: 0.9em;"> – {{ article.date | date: "%B %d, %Y" }}</span>
 				{% endif %}
-				{% if article.description %}
-					<p style="margin: 5px 0 0 0; color: #666;">{{ article.description }}</p>
+				{% if article.note %}
+					<p style="margin: 5px 0 0 0; color: #666;">{{ article.note }}</p>
 				{% endif %}
 			</li>
 		{% endfor %}
