Update Playlist tile URL to new Apple Music playlist
Changed playlist URL from pl.e3491eb67f5448ae81b49e56ba88e4cf to pl.u-xlp5VFzAz9v

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ title: "StandardPixel.com: Curation of things by Eric Gelinas"
 			<p>My flickr photostream. Basically my life since 2007, along with a little more</p>
 		</li>
 		<li class="nav__item">
-			<a href="https://music.apple.com/us/playlist/current-rotation/pl.e3491eb67f5448ae81b49e56ba88e4cf">Playlist</a>
+			<a href="https://music.apple.com/us/playlist/current-rotation/pl.u-xlp5VFzAz9v">Playlist</a>
 			<p>A playlist of what I am listening to the most right now</p>
 		</li>
 		<li class="nav__item">
