Add RSS feed for articles/links page
- articles.xml: Jekyll template generating RSS 2.0 from _data/articles.yml,
  items in reverse-chronological order with title, URL, date, and note
- head.html: <link rel="alternate"> tag on the articles page for feed discovery
- articles.html: visible RSS link next to the section heading

--- a/articles.html
+++ b/articles.html
@@ -6,7 +6,7 @@ header_style: "text-align:right;"
 ---
 
 <section style="padding: 20px;">
-	<h3>Interesting Articles</h3>
+	<h3>Interesting Articles <a href="/articles.xml" title="RSS feed" style="font-size: 0.7em; font-weight: normal; color: #999;">RSS</a></h3>
 	<p class="subtle">A collection of articles I've found interesting and worth sharing.</p>
 
 	{% if site.data.articles.size > 0 %}
