Add blog post about bands.standardpixel.com and feature it on homepage
- New blog post explaining the organic music discovery project
- Update Music tile to link to bands.standardpixel.com
- Move Music tile to first position in navigation

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@ title: "StandardPixel.com: Curation of things by Eric Gelinas"
 <nav class="nav">
 	<ul>
 		<li class="nav__item">
+			<a href="https://bands.standardpixel.com">Music</a>
+			<p>Organic music discovery</p>
+		</li>
+		<li class="nav__item">
 			<a rel="me" href="https://xoxo.zone/@standardpixel">Mastodon</a>
 			<p>I hope you like opinions</p>
 		</li>
@@ -40,10 +44,6 @@ title: "StandardPixel.com: Curation of things by Eric Gelinas"
 		<li class="nav__item">
 			<a href="https://music.apple.com/us/playlist/current-rotation/pl.u-xlp5VFzAz9v">Playlist</a>
 			<p>A playlist of what I am listening to the most right now</p>
-		</li>
-		<li class="nav__item">
-			<a href="https://music.apple.com/profile/standardpixel">Music</a>
-			<p>A deeper dive into my musical tastes and the occasional musical tastes of my children</p>
 		</li>
 		<li class="nav__item">
 			<a href="articles.html">Articles</a>
